test/errors/error5.base
Error: /Users/leonardo/Development/vult/vult/test/errors/error5.vult:2:7-8: Invalid expression
fun foo() {
   _ = *1;
       ^
